Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odbact {
    short   dummy[2] ;  
    long    data ;      
} ODBACT ;
typedef struct odbaxis {
    short   dummy ;             
    short   type ;              
    long    data[MAX_AXIS] ;    
} ODBAXIS ;
typedef struct iodbrdna {
    short   datano;         
    short   type;           
    char    sgnl1_name[9];  
    char    sgnl2_name[9];  
    char    sgnl3_name[9];  
    char    sgnl4_name[9];  
    char    sgnl5_name[9];  
    char    sgnl6_name[9];  
    char    sgnl7_name[9];  
    char    sgnl8_name[9];  
} IODBRDNA;
typedef struct odberr {
    short   err_no ;
    short   err_dtno ;
} ODBERR ;
typedef struct odbparaif {
    unsigned short  info_no ;
    short   prev_no ;
    short   next_no ;
    struct {
        short   prm_no ;
        short   prm_type ;
    } info[10] ;    
} ODBPARAIF ;
typedef struct odbsetif {
    unsigned short  info_no ;
    short   prev_no ;
    short   next_no ;
    struct {
        short   set_no ;
        short   set_type ;
    } info[10] ;    
} ODBSETIF ;
typedef struct odbdiagif {
    unsigned short  info_no ;
    short   prev_no ;
    short   next_no ;
    struct {
        short   diag_no ;
        short   diag_type ;
    } info[10] ;    
} ODBDIAGIF ;
typedef struct odbparanum {
    unsigned short  para_min ;
    unsigned short  para_max ;
    unsigned short  total_no ;
} ODBPARANUM ;
typedef struct odbsetnum {
    unsigned short  set_min ;
    unsigned short  set_max ;
    unsigned short  total_no ;
} ODBSETNUM ;
typedef struct odbdiagnum {
    unsigned short  diag_min ;
    unsigned short  diag_max ;
    unsigned short  total_no ;
} ODBDIAGNUM ;
typedef struct odbpser {
    long    poserr1 ;
    long    poserr2 ;
} ODBPSER ;
typedef struct odbspdi {
    char    sgnl1 ;
    char    sgnl2 ;
    char    sgnl3 ;
    char    sgnl4 ;
} ODBSPDI ;
typedef struct odbspdo {
    char    sgnl1 ;
    char    sgnl2 ;
    char    sgnl3 ;
    char    sgnl4 ;
} ODBSPDO ;
typedef struct iodbwave {
    short   condition ;
    char    trg_adr ;
    char    trg_bit ;
    short   trg_no ;
    short   delay ;
    short   t_range ;
    struct {
        short   kind ;
        union {
#if MAX_AXIS > 16
            long        axis ;
#else
            short       axis ;
#endif
            struct {
                char    adr ;
                char    bit ;
                short   no ;
            } io ;
        } u ;
    } ch[12] ;
} IODBWAVE ;
typedef struct iodbwvprm {
    short   condition ;
    char    trg_adr ;
    char    trg_bit ;
    short   trg_no ;
    short   reserve1 ;
    long    delay ;
    long    t_range ;
    struct {
        short   kind ;
        union {
            long    axis ;
            struct {
                char    adr ;
                char    bit ;
                short   no ;
            } io ;
        } u ;
        long    reserve2 ;
    } ch[12] ;
} IODBWVPRM ;
typedef struct odbwvdt {
    short   channel ;
    short   kind ;
    union {
        short   axis ;
        struct {
            char    adr ;
            char    bit ;
            short   no ;
        } io ;
    } u ;
    char    year ;
    char    month ;
    char    day ;
    char    hour ;
    char    minute ;
    char    second ;
    short   t_cycle ;
    short   data[8192] ;
} ODBWVDT ;
typedef struct prgdir2 {
	short	number ;
	long	length ;
	char	comment[51] ;
	char	dummy ;
} PRGDIR2;
typedef struct iodbwcsf {
     short	datano;         
     short	type;           
     long	data[MAX_AXIS]; 
} IODBWCSF;
typedef struct odbomif {
	unsigned short	om_max ;   
	unsigned short	om_sum ;   
	unsigned short	om_char ;  
} ODBOMIF ;
typedef struct odbomhis {
	short	om_no;	
	short	year;	
	short	month;	
	short	day;	
	short	hour;	
	short	minute;	
	short	second;	
	char	om_msg[256];	
} ODBOMHIS ;
typedef struct odbsyss {
     char    slot_no_p[16];
     char    slot_no_l[16];
     short   module_id[16];
     short   soft_id[16];
     char    soft_series[16][5];
     char    soft_version[16][5];
     short   soft_inst;
     char    boot_ser[5];
     char    boot_ver[5];
     char    servo_ser[5];
     char    servo_ver[5];
     char    pmc_ser[5];
     char    pmc_ver[5];
     char    ladder_ser[5];
     char    ladder_ver[5];
     char    mcrlib_ser[5];
     char    mcrlib_ver[5];
     char    mcrapl_ser[5];
     char    mcrapl_ver[5];
     char    spl1_ser[5];
     char    spl1_ver[5];
     char    spl2_ser[5];
     char    spl2_ver[5];
     char    spl3_ser[5];
     char    spl3_ver[5];
     char    c_exelib_ser[5];
     char    c_exelib_ver[5];
     char    c_exeapl_ser[5];
     char    c_exeapl_ver[5];
     char    int_vga_ser[5];
     char    int_vga_ver[5];
     char    out_vga_ser[5];
     char    out_vga_ver[5];
     char    pmm_ser[5];
     char    pmm_ver[5];
     char    pmc_mng_ser[5];
     char    pmc_mng_ver[5];
     char    pmc_shin_ser[5];
     char    pmc_shin_ver[5];
     char    pmc_shout_ser[5];
     char    pmc_shout_ver[5];
     char    pmc_c_ser[5];
     char    pmc_c_ver[5];
     char    pmc_edit_ser[5];
     char    pmc_edit_ver[5];
     char    lddr_mng_ser[5];
     char    lddr_mng_ver[5];
     char    lddr_apl_ser[5];
     char    lddr_apl_ver[5];
     char    spl4_ser[5];
     char    spl4_ver[5];
     char    mcr2_ser[5];
     char    mcr2_ver[5];
     char    mcr3_ser[5];
     char    mcr3_ver[5];
     char    eth_boot_ser[5];
     char    eth_boot_ver[5];
     char    reserve[8][5];
} ODBSYSS ;
typedef struct odbmdlc {
     short   from;
     short   dram;
     short   sram;
     short   pmc;
     short   crtc;
     short   servo12;
     short   servo34;
     short   servo56;
     short   servo78;
     short   sic;
     short   pos_lsi;
     short   hi_aio;
     short   reserve[12];
     short   drmmrc;
     short   drmarc;
     short   pmcmrc;
     short   dmaarc;
     short   iopt;
     short   hdiio;
     short   gm2gr1;
     short   crtgr2;
     short   gm1gr2;
     short   gm2gr2;
     short   cmmrb;
     short   sv5axs;
     short   sv7axs;
     short   sicaxs;
     short   posaxs;
     short   hamaxs;
     short   romr64;
     short   srmr64;
     short   dr1r64;
     short   dr2r64;
     short   iopio2;
     short   hdiio2;
     short   cmmrb2;
     short   romfap;
     short   srmfap;
     short   drmfap;
     short   drmare;
     short   pmcmre;
     short   dmaare;
     short   frmbgg;
     short   drmbgg;
     short   asrbgg;
     short   edtpsc;
     short   slcpsc;
     short   reserve2[34];
} ODBMDLC ;
typedef struct iodbtimer {
	short	type ;
	short	dummy ;
	union {
		struct {
			short	year ;
			short	month ;
			short	date ;
		} date ;
		struct {
			short	hour ;
			short	minute ;
			short	second ;
		} time ;
	} data ;
} IODBTIMER ;
typedef struct prgdir2o8 {
	long	number ;
	long	length ;
	char	comment[51] ;
	char	dummy ;
} PRGDIR2O8;
typedef struct iodbpmc {
    short   type_a ;    
    short   type_d ;    
    short   datano_s ;  
    short   datano_e ;  
    union {
        char    cdata[5] ;  
        short   idata[5] ;
        long    ldata[5] ;
    } u ;
} IODBPMC ; 
typedef struct odbpmcinf {
    short   datano ;
    struct {
        char    pmc_adr ;
        char    adr_attr ;
        unsigned short  top_num ;
        unsigned short  last_num ;
    } info[64] ;
} ODBPMCINF ;
typedef struct iodbpmccntl {
    short   datano_s ;
    short   dummy ;
    short   datano_e ;
    struct {
        char    tbl_prm ;
        char    data_type ;
        unsigned short  data_size ;
        unsigned short  data_dsp ;
        short   dummy ;
    } info[100] ;
} IODBPMCCNTL ;
typedef struct  odbpmcalm {
    char    almmsg[128] ;    
} ODBPMCALM ;
typedef struct odbpmcerr {
    short   err_no ;
    short   err_dtno ;
} ODBPMCERR ;
typedef struct odbnode {
	long node_no;
	long io_base;
	long status;
	long cnc_type;
	char node_name[20];
} ODBNODE;
FWLIBAPI short WINAPI cnc_actf( unsigned short, ODBACT * ) ;
FWLIBAPI short WINAPI cnc_absolute( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_machine( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_relative( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_distance( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_skip( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_srvdelay( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_accdecdly( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rdopnlgsname( unsigned short, short, IODBRDNA * ) ;
FWLIBAPI short WINAPI cnc_wropnlgsname( unsigned short, IODBRDNA * ) ;
FWLIBAPI short WINAPI cnc_getdtailerr( unsigned short, ODBERR * ) ;
FWLIBAPI short WINAPI cnc_rdparainfo( unsigned short, short, unsigned short, ODBPARAIF * ) ;
FWLIBAPI short WINAPI cnc_rdsetinfo( unsigned short, short, unsigned short, ODBSETIF * ) ;
FWLIBAPI short WINAPI cnc_rddiaginfo( unsigned short, short, unsigned short, ODBDIAGIF * ) ;
FWLIBAPI short WINAPI cnc_rdparanum( unsigned short, ODBPARANUM * ) ;
FWLIBAPI short WINAPI cnc_rdsetnum( unsigned short, ODBSETNUM * ) ;
FWLIBAPI short WINAPI cnc_rddiagnum( unsigned short, ODBDIAGNUM * ) ;
FWLIBAPI short WINAPI cnc_rdposerrs2( unsigned short, ODBPSER * ) ;
FWLIBAPI short WINAPI cnc_rdctrldi( unsigned short, ODBSPDI * ) ;
FWLIBAPI short WINAPI cnc_rdctrldo( unsigned short, ODBSPDO * ) ;
FWLIBAPI short WINAPI cnc_rdwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_wrwaveprm( unsigned short, IODBWAVE * ) ;
FWLIBAPI short WINAPI cnc_rdwaveprm2( unsigned short, IODBWVPRM * ) ;
FWLIBAPI short WINAPI cnc_wrwaveprm2( unsigned short, IODBWVPRM * ) ;
FWLIBAPI short WINAPI cnc_rdwavedata( unsigned short, short, short, long, long *, ODBWVDT * ) ;
FWLIBAPI short WINAPI cnc_rdprogdir2( unsigned short, short, short *, short *, PRGDIR2 * ) ;
FWLIBAPI short WINAPI cnc_rdwkcdshft( unsigned short, short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_wrwkcdshft( unsigned short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_rdwkcdsfms( unsigned short, short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_wrwkcdsfms( unsigned short, short, IODBWCSF * ) ;
FWLIBAPI short WINAPI cnc_rdomhisinfo( unsigned short, ODBOMIF * ) ;
FWLIBAPI short WINAPI cnc_rdomhistry( unsigned short, unsigned short, unsigned short *, ODBOMHIS * ) ;
FWLIBAPI short WINAPI cnc_rdsyssoft( unsigned short, ODBSYSS * ) ;
FWLIBAPI short WINAPI cnc_rdmdlconfig( unsigned short, ODBMDLC * ) ;
FWLIBAPI short WINAPI cnc_gettimer( unsigned short, IODBTIMER * ) ;
FWLIBAPI short WINAPI cnc_settimer( unsigned short, IODBTIMER * ) ;
FWLIBAPI short WINAPI pmc_rdpmcrng( unsigned short, short, short, unsigned short, unsigned short, unsigned short, IODBPMC * ) ;
FWLIBAPI short WINAPI pmc_rdpmcrng( unsigned short, short, short, short, short, short, IODBPMC *);
FWLIBAPI short WINAPI pmc_wrpmcrng( unsigned short, unsigned short, IODBPMC * ) ;
FWLIBAPI short WINAPI pmc_wrpmcrng( unsigned short, short, IODBPMC *);
FWLIBAPI short WINAPI pmc_rdpmcinfo( unsigned short, short, ODBPMCINF * ) ;
FWLIBAPI short WINAPI pmc_rdcntldata( unsigned short, short, short, short, IODBPMCCNTL * ) ;
FWLIBAPI short WINAPI pmc_wrcntldata( unsigned short, short, IODBPMCCNTL * ) ;
FWLIBAPI short WINAPI pmc_rdalmmsg( unsigned short, short, short *, short *, ODBPMCALM * ) ;
FWLIBAPI short WINAPI pmc_getdtailerr( unsigned short, ODBPMCERR * ) ;
FWLIBAPI short WINAPI cnc_rdnodeinfo( long, ODBNODE * );
#define PRGDIR2		PRGDIR2O8
#define cnc_rdprogdir2	cnc_rdprogdir2o8